# SheLeads2.0

./: .gitignore  readme.md
backend/: data_scraper.py  main.py  plan.md  pyproject.toml
backend/app/: config.py
backend/app/auth/: clerk.py
backend/app/db/: mongo.py
backend/app/models/: schemas.py
backend/app/routers/: admin.py  chat.py
backend/app/services/: ollama_service.py  vector_service.py
backend/qdrant_data/: meta.json
frontend/src/components/: Chat.jsx
